--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
    <title>My Codepen Webcite</title>
 
    <!-- Local CSS-->
-    <link href="css/styles.css" />
+    <link href="css/styles.css" rel="stylesheet" />
  </head>
  <body>
 
