--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
  <body>
 
   <div class="test-font">This is a CSS Test</div>
+  <div class="test-font-2">This is a CSS Test</div>
    
    <h1>This is the main tittle</h1> 
    <h2>This is a sub tittle <h2>
