--- a/index.html
+++ b/index.html
@@ -59,8 +59,6 @@
   <!--Ends Top Navbar-->
 
 <!--Begins Carousel-->
-
-<!--Ends Carousel-->
 <div id="carouselExampleCaptions" class="carousel slide"></div>
   <div class="carousel-indicators">
     <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -69,21 +67,21 @@
   </div>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="images/carousel-1.jpg" class="d-block w-100" alt="...">
+      <img src="..." class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
         <h5>First slide label</h5>
         <p>Some representative placeholder content for the first slide.</p>
       </div>
     </div>
     <div class="carousel-item">
-      <img src="images/carousel-2.jpg" class="d-block w-100" alt="...">
+      <img src="..." class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
         <h5>Second slide label</h5>
         <p>Some representative placeholder content for the second slide.</p>
       </div>
     </div>
     <div class="carousel-item">
-      <img src="images/carousel-3 jpg.jpg" class="d-block w-100" alt="...">
+      <img src="..." class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
         <h5>Third slide label</h5>
         <p>Some representative placeholder content for the third slide.</p>
@@ -98,6 +96,9 @@
     <span class="carousel-control-next-icon" aria-hidden="true"></span>
     <span class="visually-hidden">Next</span>
   </button>
+</div>
+<!--Ends Carousel-->
+
 </div>
 
 </header>
