--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
   </nav> 
   <!--Ends Top Navbar-->
 
-<!--Begins Carousel-->
+<!--begins carousel-->
 <div id="carouselExampleCaptions" class="carousel slide"></div>
   <div class="carousel-indicators">
     <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -74,7 +74,7 @@
       </div>
     </div>
     <div class="carousel-item">
-      <img src="images/carousel-2.jpg" class="d-block w-100" alt="...">
+      <img src="images/carousel-3.jpg" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
         <h5>Second slide label</h5>
         <p>Some representative placeholder content for the second slide.</p>
@@ -97,9 +97,7 @@
     <span class="visually-hidden">Next</span>
   </button>
 </div>
-<!--Ends Carousel-->
-
-</div>
+<!--begins carousel-->
 
 </header>
 
