--- a/index.html
+++ b/index.html
@@ -14,9 +14,6 @@
 </head>
 <body>
   
-
-
-
 <header>
 
   <!--Begins Top Navbar-->
@@ -103,7 +100,15 @@
 
 
 <main>
-  Main content goes here
+ 
+<div class="container">
+  <div class="row">
+    <div class="col">
+      Column one
+    </div>
+  </div>
+</div>
+
 </main>
 
 <footer>
@@ -115,6 +120,5 @@
   <!-- Bootstrap JS CDN-->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </div>
-
 </body>
 </html>
