--- a/index.html
+++ b/index.html
@@ -108,16 +108,19 @@
   <div class="row">
     <div class="col-12 col-xxs-12 col-xs-6 col-sm-6 col-md-6 col-lg-3 col-xl-3 col-xxl-3">
       <i class="fa-solid fa-gift"></i>
-      <br />
+      <br />Gifts
     </div>
     <div class="col-12 col-xxs-12 col-xs-6 col-sm-6 col-md-6 col-lg-3 col-xl-3 col-xxl-3">
-      Column two
+      <i class="fa-solid fa-champagne-glasses"></i> 
+      <br />Celebrations
     </div>
     <div class="col-12 col-xxs-12 col-xs-6 col-sm-6 col-md-6 col-lg-3 col-xl-3 col-xxl-3">
-      Column three
+      <i class="fa-solid fa-cake-candles"></i>
+      <br />Birthday
     </div>
     <div class="col-12 col-xxs-12 col-xs-6 col-sm-6 col-md-6 col-lg-3 col-xl-3 col-xxl-3">
-      Column fourth
+      <i class="fa-solid fa-graduation-cap"></i>
+      <br />Graduation Parties
     </div>
   </div>
 </div>
