--- a/index.html
+++ b/index.html
@@ -107,19 +107,19 @@
 <div class="container-fluid text-center fa-row">
   <div class="row">
     <div class="col-12 col-xxs-12 col-xs-6 col-sm-6 col-md-6 col-lg-3 col-xl-3 col-xxl-3">
-      <i class="fa-solid fa-gift"></i>
+      <i class="fa-solid fa-gift fa-row-icon"></i>
       <br />Gifts
     </div>
     <div class="col-12 col-xxs-12 col-xs-6 col-sm-6 col-md-6 col-lg-3 col-xl-3 col-xxl-3">
-      <i class="fa-solid fa-champagne-glasses"></i> 
+      <i class="fa-solid fa-champagne-glasses fa-row-icon"></i> 
       <br />Celebrations
     </div>
     <div class="col-12 col-xxs-12 col-xs-6 col-sm-6 col-md-6 col-lg-3 col-xl-3 col-xxl-3">
-      <i class="fa-solid fa-cake-candles"></i>
+      <i class="fa-solid fa-cake-candles fa-row-icon"></i>
       <br />Birthday
     </div>
     <div class="col-12 col-xxs-12 col-xs-6 col-sm-6 col-md-6 col-lg-3 col-xl-3 col-xxl-3">
-      <i class="fa-solid fa-graduation-cap"></i>
+      <i class="fa-solid fa-graduation-cap fa-row-icon"></i>
       <br />Graduation Parties
     </div>
   </div>
