--- a/index.html
+++ b/index.html
@@ -123,8 +123,12 @@
       <!--Begin First Paragragh-->
       <div class="container first-paragraph-div">
         <div class="row">
-          <div class="col-12 col-xxs-12 col-xs-12 col-md-6 col-lg-6 col-xxl-6">Welcome to Dreamscape Events, where your visions come to life! At Dreamscape, we specialize in crafting unforgettable experiences tailored to your unique style and personality. Whether you're planning a whimsical wedding, a corporate gala, or a cozy family celebration, our dedicated team of expert planners is here to handle every detail with creativity and precision. Let us transform your ideas into reality and make your special occasion truly extraordinary!</div>
           <div class="col-12 col-xxs-12 col-xs-12 col-md-6 col-lg-6 col-xxl-6">
+            <h2>About US</h2>
+            <p>
+            Welcome to Dreamscape Events, where your visions come to life! At Dreamscape, we specialize in crafting unforgettable experiences tailored to your unique style and personality. Whether you're planning a whimsical wedding, a corporate gala, or a cozy family celebration, our dedicated team of expert planners is here to handle every detail with creativity and precision. Let us transform your ideas into reality and make your special occasion truly extraordinary!</div>
+          </p>
+            <div class="col-12 col-xxs-12 col-xs-12 col-md-6 col-lg-6 col-xxl-6">
             <img src="https://www.dummyimage.com/600x400/de50de/fff.jpg" />
           </div>
         </div>
@@ -135,7 +139,7 @@
 <div class="container">
   <div class="row">
     <div class="col-12">
-      <h2> Modeling Event Schedule </h2>
+      <h2 class="text-center"> Modeling Event Schedule </h2>
   
       <table class="content-table">
         <thaed>
