--- a/index.html
+++ b/index.html
@@ -136,9 +136,9 @@
                 occasion truly extraordinary!
               </p>
               </div>
-              
+
             <div class="col-12 col-xxs-12 col-xs-12 col-md-6 col-lg-6 col-xxl-6">
-            <img src="https://www.dummyimage.com/600x400/de50de/fff.jpg" />
+            <img src="https://www.dummyimage.com/600x400/de50de/fff.jpg" alt="placerholder"/>
           </div>
         </div>
       </div>
@@ -193,7 +193,7 @@
         
         <tfoot class="text-centar">
           <tr>
-           <td colspan="4">footer 1</td>
+           <td colspan="4"><a href="btn btn-primary">learn more</a>
           </tr>
         </tfoot>
           </thaed>
